feat: remove system information feature
